Working on version 3.0.0

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,9 +9,9 @@
 									Update documentation
 									Update CHANGELOG
 									Change version number to 2.0.0
-2.1.0			22.03.2022			Fix missing path in "CMakeLists.txt"
+3.0.0								Fix missing path in "CMakeLists.txt"
 									Replace Arduino code with esp-idf
 									Code refractoring
 									Update documentation
 									Update CHANGELOG
-									Change version number to 2.1.0
+									Change version number to 3.0.0
