--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,7 +9,7 @@
 									Update documentation
 									Update CHANGELOG
 									Change version number to 2.0.0
-3.0.0			22.05.2022			Fix missing path in "CMakeLists.txt"
+3.0.0			22.05.2022			Fix missing path in CMakeLists.txt
 									Replace Arduino code with esp-idf
 									Add option to enable / disable LoRaWAN or P2P mode
 									Add ADR support to LoRaWAN driver
@@ -18,3 +18,10 @@
 									Update documentation
 									Update CHANGELOG
 									Change version number to 3.0.0
+3.1.0								Add support for RUI3 based firmware
+									Add option for UART to support ESP32 power management modes
+									Fix error in splash screen handling in function "RAK3172_SetMode"
+									Add option to enable / disable a hardware reset
+									Clean up Kconfig
+									Update CHANGELOG
+									Change version number to 3.1.0
