--- a/CHANGELOG
+++ b/CHANGELOG
@@ -26,6 +26,7 @@
 									Rename error codes
 									Clean up Kconfig
 									Code optimizations
-									Add RAK3172 device initialization macro
+									Add RAK3172 device structureinitialization macro
+									Update examples
 									Update CHANGELOG
 									Change version number to 3.1.0
